# Leo-Coffee

./: cafes.db  main.py  pyproject.toml  requirements.txt  vercel.json
static/css/: adup.css  auth.css  home.css  main.css
static/js/: main.js
templates/: add.html  base.html  home.html  login.html  main.html  signup.html  update.html
